# ncdashboard

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitmodules  DEVELOPER_GUIDE.md  Dockerfile  LLM_Pipeline.py  LLM_Workflow.md  README.md  USER_GUID.md  callback_controller.py  controller.py  design.md  dev.sh  docker-compose.yml  llm_config.yml  mars_runs.sh  ncdashboard.py  ncdashboard_config.yml  ncdashboard_env.yml  ncdashboard_panel.py  nginx.conf  pyproject.toml  readme.md
ai/: main.py
apis/: README.md  api.sh  app.py  requirements.txt
apis/models/: __init__.py  cache.py  dataset.py  db.py  errors.py  image.py  requests.py  session.py
apis/routes/: __init__.py  cache.py  data.py  image.py  session.py
apis/services/: cache.py  data.py  db.py  image.py
apis/utils/: data.py  (+4 more)
assets/: custom_css.css  custom_script.js
llm/: __init__.py  code_executor.py  llm_client.py  llm_layout.py  prompt_builder.py
model/: AnimationNode.py  FigureNode.py  FourDNode.py  OneDNode.py  ProfileNode.py  ThreeDNode.py  TreeNode.py  TwoDNode.py  dashboard.py  dashboardstate.py  model_utils.py  state.py  transect_utils.py
proj_layout/: figures.py  utils.py
rewrite/: config.yaml  readme.md
states/: ncdashboard_state.json
test_data/: 2012-08-01_2012-08-02.nc  gom_t007.nc  gom_t008.nc  gom_t009.nc  hycom_gom.nc  pangeo.py
tests/: test_llm.py  test_model.py  test_ncdashboard.py  test_transect_utils.py  test_ui.py
web/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.mts  web.sh
(+83 files in other folders)
